# euroclear

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
euroclear/: __init__.py  dataset.py  features.py  plots.py
euroclear/modeling/: predict.py  train.py
notebooks/: 0.0.2-mp-concat_data.ipynb  0.0.3-mp-merged_data.ipynb  0.0.3-pl_merge_data.ipynb  1.0.0-mp-world_data_eda.ipynb  1.0.1-mp-forex_ex_eda.ipynb  1.0.2-mp-accounts_eda.ipynb  1.0.3-mp-transactions_eda.ipynb
