[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "euroclear"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mateusz Pietkiewicz" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["euroclear"]
include = ["pyproject.toml", "euroclear/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["euroclear"]
force-sort-within-sections = true

